--- a/.github/workflows/validator.yml
+++ b/.github/workflows/validator.yml
@@ -61,14 +61,18 @@ jobs:
         with:
           name: logs
           path: out/*
+        
+      - name: Upload badges as artifacts
+        if: env.LOGS_EXIST == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+            name: badges
+            path: ./badges/
 
       - name: Handle badges and commit (if publishing and logs exist)
         if: ${{ github.event.inputs.publish_results == 'true' && env.LOGS_EXIST == 'true' }}
         run: |
-          # Upload badges as artifacts
-          echo "Uploading badges as artifacts..."
-          actions/upload-artifact@v4 --name badges --path ./badges/
-          
+
           # Set up Git credentials
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
